--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -21,7 +21,6 @@
     padding-right: 198px;
     margin-bottom: 10px;
     @media only screen and (max-width: 768px) {
-        height: 258px;
         padding-left: 30px;
         padding-right: 30px;
     }
@@ -35,6 +34,24 @@
     }
 }
 
+.mobile-button-container {
+    display: none;
+    @media only screen and (max-width: 768px) {
+        display: flex;
+        justify-content: center
+    }
+}
+
+.defualt-button-mobile{
+    background-color: #292c32;
+    text-align: left;
+    color: #357df7;
+    width: 158px;
+    height: 40px;
+    border-radius: 8px;
+    border: solid 1px rgba(255, 255, 255, 0.6);
+}
+
 .defualt-button {
     background-color: #292c32;
     text-align: left;
@@ -43,6 +60,9 @@
     height: 40px;
     border-radius: 8px;
     border: solid 1px rgba(255, 255, 255, 0.6);
+    @media only screen and (max-width: 768px) {
+        display: none;
+    }
 }
 
 
